codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否执行以下命令？

  原因：this is a test reason such as one that would be produced by the model

  $ echo hello world

› 1. 是，继续 (y)
  2. 是，并且不再询问以 `echo hello world` 开头的命令 (p)
  3. 否，并告诉 Codex 需要如何调整 (esc)

  按 enter 确认，或按 esc 取消
