codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  更 新 模 型 权 限

› 1. 只 读  (current)  Codex 可 以 读 取 当 前 工 作 区 的 文 件 。 编 辑 文 件 或 访 问 互 联 网 需 要
                     批 准 。
  2. 默 认             Codex 可 以 读 取 并 编 辑 当 前 工 作 区 的 文 件 ， 并 运 行 命 令 。 访 问 互
                     联 网 或 编 辑 其 他 文 件 需 要 批 准 。 （ 与 代 理 模 式 一 致 ）
  3. 全 权 限           Codex 可 以 在 无 需 批 准 的 情 况 下 编 辑 工 作 区 外 的 文 件 并 访 问 互 联
                     网 。 使 用 时 请 谨 慎 。

  按  enter 确 认 ， 或 按  esc 返 回
