codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---



























• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• 已探索
  └ 搜索 Change Approved
    读取 diff_render.rs

• Investigating rendering code (0秒 • esc 中断)


› Summarize recent commits

  tab 加入队列                                                 上下文剩余 100%
